--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,10 @@
             android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="178dp" android:layout_marginBottom="292dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+            android:text="@string/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="57dp" android:id="@+id/button2"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView2" android:onClick="tabbar"/>
 </android.support.constraint.ConstraintLayout>
