--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,19 +24,47 @@
             android:text="@string/button1" tools:ignore="MissingConstraints"
             app:layout_constraintStart_toEndOf="@+id/editText1" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent" android:onClick="sendMessage"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginTop="231dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText1" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="178dp" android:layout_marginBottom="292dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="57dp" android:id="@+id/button2"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView2" android:onClick="tabbar"/>
+            android:id="@+id/button2"
+            android:onClick="tabbar" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText1" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="@string/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText1" android:onClick="we_sub_textview"/>
+    <Button
+            android:text="@string/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button4" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText1" app:layout_constraintStart_toEndOf="@+id/button3"
+            android:layout_marginStart="8dp" android:onClick="we_sub_edittext"/>
+    <Button
+            android:text="@string/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button5" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:onClick="we_sub_button"/>
+    <Button
+            android:text="@string/button6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button5"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="we_sub_check_radio"/>
+    <Button
+            android:text="@string/button7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button6"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="we_sub_togglebutton_switch"/>
 </android.support.constraint.ConstraintLayout>
