--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,4 +67,32 @@
             android:id="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button6"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button2" android:onClick="we_sub_togglebutton_switch"/>
+    <Button
+            android:text="@string/button8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button8" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:onClick="we_sub_imageview"/>
+    <Button
+            android:text="@string/button9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button9" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button8"
+            android:layout_marginStart="8dp" android:onClick="we_sub_imagebutton"/>
+    <Button
+            android:text="@string/button10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button10" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button9"
+            android:layout_marginStart="8dp" android:onClick="we_sub_customview"/>
+    <Button
+            android:text="@string/button11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button11" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button8" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:onClick="we_sub_linearlayout"/>
 </android.support.constraint.ConstraintLayout>
