--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:scrollbars=""
+            android:fillViewport="false">
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -37,8 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button2"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText1" android:onClick="we_sub_textview"/>
+            android:layout_marginStart="8dp"
+            android:onClick="we_sub_textview" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText1"/>
     <Button
             android:text="@string/button4"
             android:layout_width="wrap_content"
@@ -78,16 +86,18 @@
             android:text="@string/button9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button9" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintStart_toEndOf="@+id/button8"
-            android:layout_marginStart="8dp" android:onClick="we_sub_imagebutton"/>
+            android:id="@+id/button9"
+            app:layout_constraintStart_toEndOf="@+id/button8"
+            android:layout_marginStart="8dp" android:onClick="we_sub_imagebutton"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button5"/>
     <Button
             android:text="@string/button10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button10" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button7" app:layout_constraintStart_toEndOf="@+id/button9"
-            android:layout_marginStart="8dp" android:onClick="we_sub_customview"/>
+            android:id="@+id/button10"
+            app:layout_constraintStart_toEndOf="@+id/button9"
+            android:layout_marginStart="8dp" android:onClick="we_sub_customview" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button5"/>
     <Button
             android:text="@string/button11"
             android:layout_width="wrap_content"
@@ -99,56 +109,149 @@
             android:text="@string/button12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button9" app:layout_constraintStart_toEndOf="@+id/button11"
-            android:layout_marginStart="8dp" android:onClick="we_sub_gravity_layout_gravity"/>
+            android:id="@+id/button12"
+            android:onClick="we_sub_gravity_layout_gravity"
+            app:layout_constraintStart_toEndOf="@+id/button11"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button8"/>
     <Button
             android:text="@string/button13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button12" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button10" app:layout_constraintStart_toEndOf="@+id/button"
-            android:layout_marginStart="8dp" android:onClick="we_sub_padding_margin"/>
+            android:id="@+id/button13"
+            android:layout_marginStart="8dp" android:onClick="we_sub_padding_margin"
+            app:layout_constraintStart_toEndOf="@+id/button12"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button8"/>
     <Button
             android:text="@string/button14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button13" android:layout_marginTop="8dp"
+            android:id="@+id/button14" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button11" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:onClick="we_sub_relativelayout"/>
     <Button
             android:text="@string/button15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button14" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toEndOf="@+id/button13"
-            android:layout_marginStart="8dp" android:onClick="we_sub_tablelayout"/>
+            android:id="@+id/button15"
+            android:onClick="we_sub_tablelayout"
+            app:layout_constraintStart_toEndOf="@+id/button14" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button11"/>
     <Button
             android:text="@string/button16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button15" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button12" app:layout_constraintStart_toEndOf="@+id/button14"
-            android:layout_marginStart="8dp" android:onClick="we_sub_framelayout"/>
+            android:id="@+id/button16"
+            android:onClick="we_sub_framelayout"
+            app:layout_constraintStart_toEndOf="@+id/button15"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button11"/>
     <Button
             android:text="@string/button17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button16" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button13" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:onClick="we_sub_absolutelayout"/>
+            android:id="@+id/button17"
+            android:onClick="we_sub_absolutelayout"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button14" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button
             android:text="@string/button18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button17" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button14" app:layout_constraintStart_toEndOf="@+id/button16"
-            android:layout_marginStart="8dp" android:onClick="we_sub_gridlayout"/>
+            android:id="@+id/button18"
+            android:onClick="we_sub_gridlayout"
+            app:layout_constraintStart_toEndOf="@+id/button17"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button14"/>
     <Button
             android:text="@string/button19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button18" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button15" app:layout_constraintStart_toEndOf="@+id/button17"
-            android:layout_marginStart="8dp" android:onClick="we_sub_33"/>
+            android:id="@+id/button19"
+            app:layout_constraintStart_toEndOf="@+id/button18"
+            android:onClick="we_sub_33" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button14"/>
+    <Button
+            android:text="@string/button20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button20"
+            android:onClick="we_sub_34" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button17" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="@string/button21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button21"
+            android:onClick="we_sub_35" app:layout_constraintStart_toEndOf="@+id/button20"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button17"/>
+    <Button
+            android:text="@string/button22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button22" app:layout_constraintStart_toEndOf="@+id/button21"
+            android:onClick="we_sub_36"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button17"/>
+    <Button
+            android:text="@string/button23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button23"
+            android:onClick="we_sub_listview"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button20" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="@string/button24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button24"
+            android:onClick="we_sub_adapter"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button20"
+            app:layout_constraintStart_toEndOf="@+id/button23" android:layout_marginStart="8dp"/>
+    <Button
+            android:text="@string/button25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button25"
+            android:onClick="we_sub_listactivity"
+            app:layout_constraintStart_toEndOf="@+id/button24" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button20"/>
+    <Button
+            android:text="@string/button26"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button26"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button23" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:onClick="we_sub_arrayadapter"/>
+    <Button
+            android:text="@string/button27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button27"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button23" app:layout_constraintStart_toEndOf="@+id/button26"
+            android:layout_marginStart="8dp" android:onClick="we_sub_simpleadapter"/>
+    <Button
+            android:text="@string/button28"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button28"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button26" android:onClick="we_sub_baseadapter"/>
+    <Button
+            android:text="@string/button29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button29"
+            app:layout_constraintStart_toEndOf="@+id/button28"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button26"/>
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
