--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -250,7 +250,7 @@
             android:id="@+id/button29"
             app:layout_constraintStart_toEndOf="@+id/button28"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button26"/>
+            app:layout_constraintTop_toBottomOf="@+id/button26" android:onClick="list_youhua"/>
     <Button
             android:text="@string/button30"
             android:layout_width="wrap_content"
