主机版上的保存

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,5 +33,69 @@
         <item>项目30</item>
         <item>项目31</item>
         <item>项目32</item>
+        <item>项目1</item>
+        <item>项目2</item>
+        <item>项目3</item>
+        <item>项目4</item>
+        <item>项目5</item>
+        <item>项目6</item>
+        <item>项目7</item>
+        <item>项目8</item>
+        <item>项目9</item>
+        <item>项目10</item>
+        <item>项目11</item>
+        <item>项目12</item>
+        <item>项目13</item>
+        <item>项目14</item>
+        <item>项目15</item>
+        <item>项目16</item>
+        <item>项目17</item>
+        <item>项目18</item>
+        <item>项目19</item>
+        <item>项目20</item>
+        <item>项目21</item>
+        <item>项目22</item>
+        <item>项目23</item>
+        <item>项目24</item>
+        <item>项目25</item>
+        <item>项目26</item>
+        <item>项目27</item>
+        <item>项目28</item>
+        <item>项目29</item>
+        <item>项目30</item>
+        <item>项目31</item>
+        <item>项目32</item>
+        <item>项目1</item>
+        <item>项目2</item>
+        <item>项目3</item>
+        <item>项目4</item>
+        <item>项目5</item>
+        <item>项目6</item>
+        <item>项目7</item>
+        <item>项目8</item>
+        <item>项目9</item>
+        <item>项目10</item>
+        <item>项目11</item>
+        <item>项目12</item>
+        <item>项目13</item>
+        <item>项目14</item>
+        <item>项目15</item>
+        <item>项目16</item>
+        <item>项目17</item>
+        <item>项目18</item>
+        <item>项目19</item>
+        <item>项目20</item>
+        <item>项目21</item>
+        <item>项目22</item>
+        <item>项目23</item>
+        <item>项目24</item>
+        <item>项目25</item>
+        <item>项目26</item>
+        <item>项目27</item>
+        <item>项目28</item>
+        <item>项目29</item>
+        <item>项目30</item>
+        <item>项目31</item>
+        <item>项目32</item>
     </string-array>
 </resources>
