练习到51课时

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -98,4 +98,14 @@
         <item>项目31</item>
         <item>项目32</item>
     </string-array>
+    <string-array name="professionals">
+        <item>Android</item>
+        <item>Java</item>
+        <item>Python</item>
+        <item>PHP</item>
+        <item>.Net</item>
+        <item>C++</item>
+        <item>C</item>
+    </string-array>
+
 </resources>
