--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -301,5 +301,40 @@
                 android:id="@+id/button36" app:layout_constraintStart_toEndOf="@+id/button35"
                 android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button33" android:onClick="we_sub_stackview"/>
+        <Button
+                android:text="@string/button37"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button37" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button35" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_progressbar"/>
+        <Button
+                android:text="@string/button38"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button38" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button35" app:layout_constraintStart_toEndOf="@+id/button37"
+                android:layout_marginStart="8dp" android:onClick="we_sub_custom_progressbar"/>
+        <Button
+                android:text="@string/button39"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button39" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button37" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_seekbar_ratingbar"/>
+        <Button
+                android:text="@string/button40"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button40" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button39" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_viewswitcher"/>
+        <Button
+                android:text="@string/button41"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button41" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button40" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_imageswitcher_textswitcher"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
