--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -333,8 +333,24 @@
                 android:text="@string/button41"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button41" android:layout_marginTop="8dp"
+                android:id="@+id/button41"
+                android:onClick="we_sub_imageswitcher"
+                app:layout_constraintStart_toEndOf="@+id/button40"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button39"/>
+        <Button
+                android:text="@string/button42"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button42" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button40" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:onClick="we_sub_imageswitcher_textswitcher"/>
+                android:layout_marginStart="8dp" android:onClick="we_sub_textswitcher"/>
+        <Button
+                android:text="@string/button43"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button43" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button40" app:layout_constraintStart_toEndOf="@+id/button42"
+                android:layout_marginStart="8dp" android:onClick="we_sub_viewflipper"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
