--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -366,5 +366,12 @@
                 android:id="@+id/button45" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button42" app:layout_constraintStart_toEndOf="@+id/button44"
                 android:layout_marginStart="8dp" android:onClick="we_sub_timepicker"/>
+        <Button
+                android:text="@string/button46"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button46" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button42" app:layout_constraintStart_toEndOf="@+id/button45"
+                android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
