--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -373,5 +373,69 @@
                 android:id="@+id/button46" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button42" app:layout_constraintStart_toEndOf="@+id/button45"
                 android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker"/>
+        <Button
+                android:text="@string/button47"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button47" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button44" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_clock"/>
+        <Button
+                android:text="@string/button48"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button48" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button44" app:layout_constraintStart_toEndOf="@+id/button47"
+                android:layout_marginStart="8dp" android:onClick="we_sub_calendarview_chronnmeter"/>
+        <Button
+                android:text="@string/button49"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button49" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button44" app:layout_constraintStart_toEndOf="@+id/button48"
+                android:layout_marginStart="8dp" android:onClick="we_sub_scrollview"/>
+        <Button
+                android:text="@string/button50"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button50" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button44" app:layout_constraintStart_toEndOf="@+id/button49"
+                android:layout_marginStart="8dp" android:onClick="we_sub_searchview"/>
+        <Button
+                android:text="@string/button51"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button51" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button47" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_tabhosttab"/>
+        <Button
+                android:text="@string/button52"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button52" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button47" app:layout_constraintStart_toEndOf="@+id/button51"
+                android:layout_marginStart="8dp" android:onClick="we_sub_recyclerview"/>
+        <Button
+                android:text="@string/button53"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button53"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button51" app:layout_constraintStart_toStartOf="parent"
+                android:onClick="we_sub_recyclerview_divider"/>
+        <Button
+                android:text="@string/button54"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button54" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button51" app:layout_constraintStart_toEndOf="@+id/button53"
+                android:layout_marginStart="8dp" android:onClick="we_sub_recyclerview_click"/>
+        <Button
+                android:text="@string/button55"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button55" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button53" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
