--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -372,7 +372,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button46" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button42" app:layout_constraintStart_toEndOf="@+id/button45"
-                android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker"/>
+                android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <Button
                 android:text="@string/button47"
                 android:layout_width="wrap_content"
@@ -436,6 +437,28 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button55" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button53" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:onClick="we_sub_recyclerview_apply"/>
+        <Button
+                android:text="@string/button56"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button56" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button53" app:layout_constraintStart_toEndOf="@+id/button55"
+                android:layout_marginStart="8dp" android:onClick="we_sub_recyclerview_header_and_footer"/>
+        <Button
+                android:text="@string/button57"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button57" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button55" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_viewpager"/>
+        <Button
+                android:text="@string/button58"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button58" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button55" app:layout_constraintStart_toEndOf="@+id/button57"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:onClick="we_sub_viewpager_tabhost"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
