--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -460,5 +460,48 @@
                 app:layout_constraintTop_toBottomOf="@+id/button55" app:layout_constraintStart_toEndOf="@+id/button57"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:onClick="we_sub_viewpager_tabhost"/>
+        <Button
+                android:text="@string/button59"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button59" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button57" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_cardview"/>
+        <Button
+                android:text="@string/button60"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button60" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button57" app:layout_constraintStart_toEndOf="@+id/button59"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:onClick="we_sub_swiperefreshlayout"/>
+        <Button
+                android:text="@string/button61"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button61" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button59" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_rumen"/>
+        <Button
+                android:text="@string/button62"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button62" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button59" app:layout_constraintStart_toEndOf="@+id/button61"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_on_off"/>
+        <Button
+                android:text="@string/button63"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button63" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button59" app:layout_constraintStart_toEndOf="@+id/button62"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_life_cycle"/>
+        <Button
+                android:text="@string/button64"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button64" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button61" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_save_h_or_v"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
