--- a/app/src/main/res/layout/tabbar.xml
+++ b/app/src/main/res/layout/tabbar.xml
@@ -18,6 +18,13 @@
             android:text="@string/title_home"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/tabbar_get"
+            android:text="点击回调微擎上的数据"
+            tools:ignore="MissingConstraints" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/navigation"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
