将默认包名修改，方便后期识别

--- a/app/src/main/res/layout/we_sub_customview.xml
+++ b/app/src/main/res/layout/we_sub_customview.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <com.example.myapplication.customview
+    <com.chenyuwulu.ViewComic.customview
             android:id="@+id/counter_view"
             android:layout_width="100dp"
             android:layout_height="100dp"/>
