--- a/app/src/main/res/layout/we_sub_custom_progressbar.xml
+++ b/app/src/main/res/layout/we_sub_custom_progressbar.xml
@@ -9,7 +9,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:src="@drawable/myprogressbar"/>
-    <com.example.myapplication.CircleProgressBar
+    <com.chenyuwulu.ViewComic.CircleProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
