--- a/app/src/main/res/layout/we_sub_fragment_add_delete.xml
+++ b/app/src/main/res/layout/we_sub_fragment_add_delete.xml
@@ -30,7 +30,7 @@
 
     <fragment
             android:id="@+id/fragment_one"
-            android:name="com.example.myapplication.we_sub_fragment_add_delete_first"
+            android:name="com.chenyuwulu.ViewComic.we_sub_fragment_add_delete_first"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
