--- a/app/src/main/res/layout/navi_head.xml
+++ b/app/src/main/res/layout/navi_head.xml
@@ -11,13 +11,13 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/bh3"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="zwt_UseDesignDemo"/>
+            android:text="用户名"/>
 </LinearLayout>
