--- a/chenyu_demo/src/main/res/layout/course_38_footer.xml
+++ b/chenyu_demo/src/main/res/layout/course_38_footer.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    android:layout_height="50dp">
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_height="match_parent"
+        android:text="底部区域"
+        android:textSize="20sp"
+        android:gravity="center"/>
 </LinearLayout>
